chore: add isAdmin field in user response
